add a new function

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(learnc C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(learnc src/main.c src/utils/utils.h src/utils/utils.c)
+add_executable(learnc src/main.c src/utils/utils.h src/utils/utils.c src/global.h src/mem/mem.c src/mem/mem.h)
